--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.Pe_PRM"
         tools:targetApi="31">
         <activity
+            android:name=".DetailEmployee"
+            android:exported="false" />
+        <activity
+            android:name=".UpdateEmployee"
+            android:exported="false" />
+        <activity
+            android:name=".AddEmployee"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
